02-test-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: ovh
    external-dns.alpha.kubernetes.io/target: REPLACE_WITH_IP
spec:
  ingressClassName: nginx
  rules:
    - host: nginx.sylvain.cloud
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: nginx
              port:
                number: 80
  tls:
  - hosts:
    - nginx.sylvain.cloud
    secretName: nginx-sylvain-cloud-tls
